<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="150dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:fontFamily="@font/nunitobold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gd_center_vertical" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_user_name"
        android:layout_width="250dp"
        app:hintEnabled="false"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_user_name"
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/email"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="250dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass"
            android:layout_marginTop="5dp"
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey"
            android:hint="@string/password_hint"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="15dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunitobold"
        android:text="@string/sign_in_btn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_password"/>

    <!--    <com.google.android.material.textview.MaterialTextView-->
    <!--        android:id="@+id/blok"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        android:layout_marginEnd="76dp"-->
    <!--        android:background="?attr/selectableItemBackground"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        android:paddingTop="10dp"-->
    <!--        android:text="|"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="15dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.067"-->
    <!--        app:layout_constraintStart_toEndOf="@id/tv_register"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/btn_login"/>-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/nunitoregular"
        android:linksClickable="true"
        android:text="@string/register_instruction"
        android:textColor="@color/black"
        android:textColorHint="@color/bluedark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tv_forgot_password"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textColorHint="@color/bluedark"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:enabled="false"
        android:fontFamily="@font/nunitobold"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_info"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/nunitobold"
        android:text="@string/info"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/nunitoregular"
        android:text="@string/versi"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/tv_forgot_password"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset" />


</androidx.constraintlayout.widget.ConstraintLayout>