<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

<androidx.cardview.widget.CardView
    android:id="@+id/card"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardBackgroundColor="@color/white"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="7dp">

<LinearLayout
    android:id="@+id/lin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/namabni"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:textSize="10dp"
        android:layout_marginTop="7dp"
        android:ellipsize="marquee"
        android:lines="2"
        android:textColor="@color/black"
        android:maxLines="2"
        android:text="@string/namabni"
        android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tanggal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="7dp"
        android:textColor="@color/black"
        android:ellipsize="marquee"
        android:textSize="10dp"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/date"
        android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="7dp"
        android:ellipsize="marquee"
        android:textColor="@color/black"
        android:lines="2"
        android:textSize="10dp"
        android:maxLines="2"
        android:text="@string/ama"
        android:textStyle="bold"/>
</LinearLayout>

</androidx.cardview.widget.CardView>
<View
android:layout_width="match_parent"
android:layout_height="1dp"
android:layout_marginStart="8dp"
android:layout_marginTop="16dp"
android:layout_marginEnd="8dp"
android:background="@color/grey"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.0"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/card"
app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>